--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ button {
     width: 60%;
     float: left;
     font-size: 20pt;
-    color: #1c6aec;
+    color: #196c37;
     text-align: left;
     padding-left: 30px;
     position: absolute;
@@ -346,7 +346,7 @@ button {
     margin: 0 auto;
     text-align: center;
     color: #ffffff;
-    background-color: #1c6aec;
+    background-color: #196c37;
     height: 50px;
     display: block;
     font-size: 20px;
@@ -365,7 +365,7 @@ button {
 .our_text{
 	width: 100%;
 	float: left;
-	color: #1c6aec;
+	color: #196c37;
     font-size: 20pt;
     padding-left: 20px;
 
@@ -384,7 +384,7 @@ button {
     margin-top: 50px;
 }
 #my_slider .carousel-control-prev:hover, #my_slider .carousel-control-next:hover, #my_slider .carousel-control-prev:focus, #my_slider .carousel-control-next:focus {
-    background: #1c6aec;
+    background: #196c37;
     color: #ffffff !important;
 }
 #my_slider a.carousel-control-prev {
@@ -408,7 +408,7 @@ button {
     position: absolute;
     top: 37%;
     right: -60px;
-    background-color: #1c6aec;
+    background-color: #196c37;
     color: #ffffff;
 }
 
@@ -425,7 +425,7 @@ button {
 .seemore_bt{
 	width: 15%;
 	margin: 0 auto;
-	background-color: #1c6aec;
+	background-color: #196c37;
 	color: #ffffff;
 	text-align: center;
 	font-size: 20px;
