--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ button {
 	width: 100%;
 	float: left;
 	font-size: 40pt;
-	color: #000369;
+	color: #010220;
 }
 .lorem_text {
     width: 100%;
@@ -287,7 +287,7 @@ button {
     width: 43%;
     float: left;
     color: #ffffff;
-    background-color: #000369;
+    background-color: #010220;
     height: 50px;
     text-align: center;
     font-size: 20px;
@@ -310,7 +310,7 @@ button {
     width: 60%;
     float: left;
     font-size: 20pt;
-    color: #196c37;
+    color: #010220;
     text-align: left;
     padding-left: 30px;
     position: absolute;
@@ -346,7 +346,7 @@ button {
     margin: 0 auto;
     text-align: center;
     color: #ffffff;
-    background-color: #196c37;
+    background-color: #99cc99;
     height: 50px;
     display: block;
     font-size: 20px;
@@ -365,7 +365,7 @@ button {
 .our_text{
 	width: 100%;
 	float: left;
-	color: #196c37;
+	color: #010220;
     font-size: 20pt;
     padding-left: 20px;
 
@@ -384,7 +384,7 @@ button {
     margin-top: 50px;
 }
 #my_slider .carousel-control-prev:hover, #my_slider .carousel-control-next:hover, #my_slider .carousel-control-prev:focus, #my_slider .carousel-control-next:focus {
-    background: #196c37;
+    background: #99cc99;
     color: #ffffff !important;
 }
 #my_slider a.carousel-control-prev {
@@ -408,7 +408,7 @@ button {
     position: absolute;
     top: 37%;
     right: -60px;
-    background-color: #196c37;
+    background-color: #99cc99;
     color: #ffffff;
 }
 
@@ -425,7 +425,7 @@ button {
 .seemore_bt{
 	width: 15%;
 	margin: 0 auto;
-	background-color: #196c37;
+	background-color: #99cc99;
 	color: #ffffff;
 	text-align: center;
 	font-size: 20px;
@@ -588,7 +588,7 @@ button.main_bt a:hover { color: #faf9f9; }
 	color: #ffffff;
 }
 .footer_menu li a:hover{ 
-	color: #000369;
+	color: #010220;
 }
 
 .footer_lorem_text {
@@ -602,7 +602,7 @@ button.main_bt a:hover { color: #faf9f9; }
 .input-group>.input-group-append>.btn, .input-group>.input-group-append>.input-group-text, .input-group>.input-group-prepend:first-child>.btn:not(:first-child), .input-group>.input-group-prepend:first-child>.input-group-text:not(:first-child), .input-group>.input-group-prepend:not(:first-child)>.btn, .input-group>.input-group-prepend:not(:first-child)>.input-group-text {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    background-color: #000369;
+    background-color: #010220;
     height: 50px;
     color: #fff;
     border: 0px;
